sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__HojinkakuEquationLongAndAbbr__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__HojinkakuEquationLongAndAbbr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>法人格の略称を正称の表記とみなして会社名を比較する</label>
    <type>Checkbox</type>
</CustomField>