sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__MappingLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__MappingLastModifiedDateTime__c</fullName>
    <label>マッピング最終更新日</label>
    <type>DateTime</type>
</CustomField>