sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__MConditionLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__MConditionLastModifiedDateTime__c</fullName>
    <label>連携設定最終更新日</label>
    <type>DateTime</type>
</CustomField>