sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistAccountCompareField__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistAccountCompareField__c</fullName>
    <label>取引先登録:取引先 会社名と比較する項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>