sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistAccountNotOverWrite__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistAccountNotOverWrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:取引先を名刺情報で上書きしない</label>
    <type>Checkbox</type>
</CustomField>