sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistAccountQueryRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistAccountQueryRecordTypeIds__c</fullName>
    <label>取引先登録:取引先レコードタイプ</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>