sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistContactNotOverWrite__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistContactNotOverWrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:取引先責任者を名刺情報で上書きしない</label>
    <type>Checkbox</type>
</CustomField>