sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistDispAccountOverWriteCheckbox__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistDispAccountOverWriteCheckbox__c</fullName>
    <defaultValue>true</defaultValue>
    <description>オンの場合、「既存の取引先を名刺情報で上書きする」チェックボックスを表示します。</description>
    <label>取引先登録:「既存の取引先を名刺情報で上書きする」を表示する</label>
    <type>Checkbox</type>
</CustomField>