sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistDispAccountRectype__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistDispAccountRectype__c</fullName>
    <defaultValue>true</defaultValue>
    <label>取引先登録:取引先レコードタイプ選択を表示する</label>
    <type>Checkbox</type>
</CustomField>