sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistLeadCompareCustomize__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistLeadCompareCustomize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:リード 会社名と比較する項目をカスタマイズする</label>
    <type>Checkbox</type>
</CustomField>