sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistLeadConfirmValue__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistLeadConfirmValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:リード更新前後の値の確認を行う</label>
    <type>Checkbox</type>
</CustomField>