sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistLeadNoToDo__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistLeadNoToDo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:リードToDo登録しない</label>
    <type>Checkbox</type>
</CustomField>