sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistLeadNotOverWrite__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistLeadNotOverWrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引先登録:リードを名刺情報で上書きしない</label>
    <type>Checkbox</type>
</CustomField>