sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RegistToDoSubject__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RegistToDoSubject__c</fullName>
    <defaultValue>&apos;名刺交換&apos;</defaultValue>
    <label>取引先登録:ToDo件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>