sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiAccountAddressPref__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiAccountAddressPref__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:都道府県</label>
    <type>Checkbox</type>
</CustomField>