sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiAccountPhone__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiAccountPhone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:電話</label>
    <type>Checkbox</type>
</CustomField>