sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiAccountQueryRecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiAccountQueryRecordTypeIds__c</fullName>
    <description>自動連携で既存の取引先を検索するときの対象とするレコードタイプ。</description>
    <label>自動連携:自動連携で検索対象の取引先レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>