sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiAccountRecordTypes__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiAccountRecordTypes__c</fullName>
    <label>自動連携:取引先レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>