sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiAccountSite__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiAccountSite__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:取引先 部門</label>
    <type>Checkbox</type>
</CustomField>