sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiAccountSitePartialMatch__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiAccountSitePartialMatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:部署は部分一致検索</label>
    <type>Checkbox</type>
</CustomField>