sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiAccountZipCode__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiAccountZipCode__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:郵便番号</label>
    <type>Checkbox</type>
</CustomField>