sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiContactFirstName__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:名</label>
    <type>Checkbox</type>
</CustomField>