sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiContactMail__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiContactMail__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動連携:メールアドレス</label>
    <type>Checkbox</type>
</CustomField>