sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiCreateContactOnAcountWithoutLead__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiCreateContactOnAcountWithoutLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リードなく、取引先既存で取引先責任者を作成する</label>
    <type>Checkbox</type>
</CustomField>