sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiCreateLeadOnTooManyAccounts__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiCreateLeadOnTooManyAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:既存取引先が複数あり特定できないとき、リードを作る</label>
    <type>Checkbox</type>
</CustomField>