sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiLeadActive__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiLeadActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>自動連携におけるリード登録機能 を有効化する。リード登録機能 はリード拡張パッケージの機能だが、設定は基本パッケージ内に持つ</description>
    <label>自動連携:リード登録機能を有効化</label>
    <type>Checkbox</type>
</CustomField>