sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiLeadCity__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiLeadCity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード市区郡</label>
    <type>Checkbox</type>
</CustomField>