sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiLeadCompany__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiLeadCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード会社名</label>
    <type>Checkbox</type>
</CustomField>