sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiLeadLastName__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiLeadLastName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:リード姓</label>
    <type>Checkbox</type>
</CustomField>