sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiLeadNOExistCreateNew__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiLeadNOExistCreateNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:既存のリードがなければ新規作成する</label>
    <type>Checkbox</type>
</CustomField>