sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__RenkeiLeadOverwrite__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__RenkeiLeadOverwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動連携:既存のリードを上書きする</label>
    <type>Checkbox</type>
</CustomField>