sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardBasicSetting__c/fields/SmartViscaf__ScanSelectCampaign__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__ScanSelectCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>スキャン:キャンペーン選択を有効化</label>
    <type>Checkbox</type>
</CustomField>